[package]
name = "verified_bot_commit"
version = "0.1.0"
edition = "2024"
description = "GitHub Action for creating signed and verified bot commits"
license = "GPL-3.0"
repository = "https://github.com/siiway/verified_bot_commit"

[dependencies]
base64 = "0.22"
glob-match = "0.2"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[profile.release]
strip = true
lto = true
opt-level = "z"
